iteratile:5,6,7,8